2006-01-13  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c (net_usershare_run): Don't use G_SPAWN_FILE_AND_ARGV_ZERO.
	(refresh_shares): g_message() if net_usershare_run() fails.
	(add_share): Implement the call to net_usershare_run().
	(add_share_info_to_hashes): New helper function.
	(remove_share_info_from_hashes): New helper function.

2006-01-12  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c (shares_get_share_info_for_path): Oops, fix the
	GError assertion.
	(shares_get_share_info_for_share_name): Likewise.
	(add_key_group_to_hashes): Fix the sense of strcmp().

	* src/shares.c (DEBUG_SHARES): Add a debugging flag so that we
	call a stub program instead of "net usershare".

2006-01-12  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c (add_key_group_to_hashes): New helper function to
	get the share info out of a key file group.
	(refresh_shares): Call net_usershare_run() to get a GKeyFile out
	of "net usershare"; extract the share info groups from it.

2006-01-11  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c (refresh_shares): Return a GError.
	(refresh_if_needed): Likewise.
	(shares_get_path_is_shared): Take a GError argument; make the
	return value be a success condition.
	(shares_get_share_info_for_path): Likewise.
	(shares_get_share_name_exists): Likewise.
	(shares_get_share_info_for_share_name): Likewise.
	(shares_get_share_info_list): Likewise.
	(throw_error_on_refresh): New debugging variable.
	(shares_set_debug): Add an error_on_refresh argument.
	(refresh_shares): Throw an error if throw_error_on_refresh is set.
	(net_usershare_run): New function to run "net usershare" and parse
	its output into a GKeyFile.

	* src/nautilus-share.c (property_page_share_name_is_valid): Pass a
	GError to the shares.h functions.
	(file_get_share_status): Likewise.
	(create_property_page): Likewise.  Also, throw an error dialog if
	we can't get the sharing info.
